# openengine

./: .gitignore  AUTHORS.txt  CMakeLists.txt  GLTexturePlayer.dist  async-dist.py  dist.py  emacs-TAGS.sh  make.py  make.sh  oelib.py  repo.py
conf/: HEADER
conf/cmake/: FindBoost.cmake  FindGLEW.cmake  FindGLUT.cmake  FindPthread.cmake  FindSDL.cmake  SetupBoost.cmake  SetupDebug.cmake  SetupDependencies.cmake  SetupDoxygen.cmake  SetupExtensionsAndProjects.cmake  SetupExternals.cmake  SetupGCC.cmake  SetupOEBuild.cmake  SetupOpenGL.cmake  SetupSDL.cmake  SetupVS.cmake
conf/darcs/: binaries  boring
conf/doxygen/: doxygen.cfg
conf/emacs/: openengine.el
src/: CMakeLists.txt  basic.dist
src/Animation/: AnimatedTransformation.cpp  AnimatedTransformation.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  CMakeLists.txt
src/Core/: CMakeLists.txt  Core.cpp  Core.h  Engine.cpp  Engine.h  EngineEvents.h  Event.h  Exceptions.h  GameEngine.cpp  GameEngine.h  IEngine.h  IEvent.h  IGameEngine.cpp  IGameEngine.h  IGameFactory.h  IListener.h  IModule.cpp  IModule.h  IReflectable.h  LockedQueue.h  LockedQueuedEvent.h  Mutex.cpp  Mutex.h  QueuedEvent.h  StateEvent.h  Thread.cpp  Thread.h  TickEngine.cpp  TickEngine.h
src/Devices/: CMakeLists.txt  Devices.cpp  Devices.h  IJoystick.h  IKeyboard.cpp  IKeyboard.h  IMouse.cpp  IMouse.h  SDLInput.cpp  SDLInput.h  Symbols.h
src/Display/: CMakeLists.txt  Camera.cpp  Camera.h  CanvasQueue.cpp  CanvasQueue.h  Display.cpp  Display.h  FollowCamera.cpp  FollowCamera.h  Frustum.cpp  Frustum.h  ICanvas.h  ICanvasBackend.h  IEnvironment.h  IFrame.h  IRenderCanvas.h  IViewingVolume.h  IViewingVolumeDecorator.h  InterpolatedViewingVolume.cpp  InterpolatedViewingVolume.h  OrthogonalViewingVolume.cpp  OrthogonalViewingVolume.h  Orthotope.cpp  Orthotope.h  PerspectiveViewingVolume.cpp  PerspectiveViewingVolume.h  RenderCanvas.cpp  RenderCanvas.h  SDLFrame.cpp  SDLFrame.h  StereoCamera.h  TrackingCamera.cpp  TrackingCamera.h  TrackingFollowCamera.cpp  TrackingFollowCamera.h  ViewingVolume.cpp  ViewingVolume.h  Viewport.cpp  Viewport.h
src/EventSystem/: AbstractEvent.h  AbstractListener.h  CMakeLists.txt  Event.h  EventQueue.cpp  EventQueue.h  EventSystem.h  Listener.h  QueuedListener.h  UntypedListener.h
src/Geometry/: BoundingGeometry.h  Box.cpp  Box.h  CMakeLists.txt  DrawPrimitive.cpp  DrawPrimitive.h  Face.cpp  Face.cpp.rej  Face.h  FaceSet.cpp  FaceSet.h  Geometry.cpp  Geometry.h  GeometrySet.cpp  GeometrySet.h  ICollisionShape.h  Light.h  Line.cpp  Line.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Polygon.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Tests.cpp  Tests.h  TriangleIterator.h  Vertex.h  VertexArray.cpp  VertexArray.h
src/Geometry/tests/: CMakeLists.txt  TestFace.cpp
src/Logging/: CMakeLists.txt  ColorStreamLogger.cpp  ColorStreamLogger.h  ILogger.h  Logger.cpp  Logger.h  LoggerType.h  Logging.cpp  Logging.h  StreamLogger.cpp  StreamLogger.h
src/Math/: CMakeLists.txt  Color.h  Exceptions.cpp  Exceptions.h  HSLColor.cpp  HSLColor.h  Math.cpp  Math.h  Matrix.h  Quaternion.h  RGBAColor.cpp  RGBAColor.h  RGBColor.cpp  RGBColor.h  RandomGenerator.cpp  RandomGenerator.h  Tensor.h  Vector.h  VectorIterator.h  VectorList.h
src/Math/tests/: CMakeLists.txt  TensorTest.cpp
src/Meta/: BoostSerialization.h  CMakeLists.txt  Config.h  Meta.cpp  Meta.h  OEMeta.h  OpenGL.h  SDL.h  Time.h  Types.h
src/Renderers/: BufferObjectBinder.cpp  BufferObjectBinder.h  CMakeLists.txt  DataBlockBinder.cpp  DataBlockBinder.h  IBufferedRenderer.h  IRenderNode.h  IRenderer.h  IRenderingView.h  RenderStateNode.cpp  RenderStateNode.h  Renderers.cpp  Renderers.h  TextureLoader.cpp  TextureLoader.h
src/Renderers/OpenGL/: CMakeLists.txt  Renderer.cpp  Renderer.h  RenderingView.cpp  RenderingView.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/Resources/: BinaryStreamArchive.cpp  BinaryStreamArchive.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Cubemap.h  DataBlock.h  DataBlockVectorList.h  DataIndices.h  Directory.cpp  Directory.h  DirectoryManager.cpp  DirectoryManager.h  Exceptions.h  File.cpp  File.h  FrameBuffer.h  GLSLResource.cpp  GLSLResource.h  IArchiveReader.cpp  IArchiveReader.h  IArchiveWriter.cpp  IArchiveWriter.h  IBufferObject.h  ICubemap.cpp  ICubemap.h  IDataBlock.cpp  IDataBlock.h  IFontResource.h  IFontTextureResource.h  IModelResource.h  IResource.h  IResourcePlugin.h  ISerializable.h  IShaderResource.h  ITexture.cpp  ITexture.h  ITexture2D.h  ITexture3D.h  ITextureResource.h  (+26 more)
src/Resources/Types/: ResourceTypes.h
src/Resources/tests/: CMakeLists.txt  TestSerialize.cpp
src/Scene/: AnimTransNode.h  AnimatedTransformation.cpp  AnimatedTransformationNode.cpp  AnimatedTransformationNode.h  AnimationNode.cpp  AnimationNode.h  BlendingNode.cpp  BlendingNode.h  CMakeLists.txt  CollectedGeometryTransformer.cpp  CollectedGeometryTransformer.h  DirectionalLightNode.cpp  DirectionalLightNode.h  DotVisitor.cpp  DotVisitor.h  Exceptions.h  GeometryNode.cpp  GeometryNode.h  ISceneNode.cpp  ISceneNode.h  ISceneNodeVisitor.cpp  ISceneNodeVisitor.cpp.tpl  ISceneNodeVisitor.h  ISceneNodeVisitor.h.tpl  LightNode.cpp  LightNode.h  MeshNode.cpp  MeshNode.h  ModelNode.cpp  ModelNode.h  PointLightNode.cpp  PointLightNode.h  PostProcessNode.cpp  PostProcessNode.h  PropertyNode.cpp  PropertyNode.h  RenderNode.h  RenderStateNode.cpp  RenderStateNode.h  Scene.cpp  (+18 more)
src/Scene/tests/: CMakeLists.txt  PropertyNode.cpp  SearchTool.cpp  TestRenderStateNode.cpp  TestVisitorStrategies.cpp
src/Testing/: Testing.h
tests/: CMakeLists.txt  GameTestFactory.cpp  GameTestFactory.h  box.mtl  testDevices.cpp  testDevices.h  testDisplay.cpp  testDisplay.h  testEventSystem.cpp  testEventSystem.h  testExample.cpp  testExample.h  testGameEngine.cpp  testGameEngine.h  testGeometry.cpp  testGeometry.h  testMath.cpp  testMath.h  testOBJModelResource.cpp  testOBJModelResource.h  testResources.cpp  testResources.h  testScene.cpp  testScene.h  test_suite.cpp  test_suite.h
(+20 files in other folders)
