ADD_LIBRARY(OpenEngine_Display
  IEnvironment.h
  Display.cpp
  IFrame.h
  IViewingVolume.h
  IViewingVolumeDecorator.h
  Viewport.h
  Viewport.cpp
  ViewingVolume.h
  ViewingVolume.cpp
  Camera.h
  Camera.cpp
  Frustum.h
  Frustum.cpp
  Orthotope.h
  Orthotope.cpp
  FollowCamera.h
  FollowCamera.cpp
  InterpolatedViewingVolume.h
  InterpolatedViewingVolume.cpp
)

TARGET_LINK_LIBRARIES(OpenEngine_Display
  OpenEngine_Core
  OpenEngine_Math
)
