ADD_LIBRARY(OpenEngine_Display
  IEnvironment.h
  Display.cpp
  IFrame.h
  ICanvas.h
  ICanvasBackend.h
  IRenderCanvas.h
  RenderCanvas.h
  RenderCanvas.cpp
  CanvasQueue.h
  CanvasQueue.cpp
  IViewingVolume.h
  IViewingVolumeDecorator.h
  Viewport.h
  Viewport.cpp
  ViewingVolume.h
  ViewingVolume.cpp
  PerspectiveViewingVolume.h
  PerspectiveViewingVolume.cpp
  OrthogonalViewingVolume.h
  OrthogonalViewingVolume.cpp
  Camera.h  
  Camera.cpp
  StereoCamera.h
  Frustum.h
  Frustum.cpp
  TrackingCamera.h
  TrackingCamera.cpp
  TrackingFollowCamera.h
  TrackingFollowCamera.cpp
  FollowCamera.h
  FollowCamera.cpp
  InterpolatedViewingVolume.h
  InterpolatedViewingVolume.cpp
)

TARGET_LINK_LIBRARIES(OpenEngine_Display
  OpenEngine_Core
  OpenEngine_Math
  OpenEngine_Geometry
)
