ADD_LIBRARY(OpenEngine_Geometry
  Geometry.h
  Geometry.cpp
  BoundingGeometry.h
  Box.h
  Box.cpp
  Sphere.h
  Sphere.cpp
  Line.h
  Line.cpp
  Plane.h
  Plane.cpp
  Square.h
  Square.cpp
  Face.h
  Face.cpp
  FaceSet.h
  FaceSet.cpp
  Material.h
  Material.cpp
  VertexArray.h
  VertexArray.cpp
)

TARGET_LINK_LIBRARIES(OpenEngine_Geometry
  OpenEngine_Math
  OpenEngine_Logging
)