ADD_LIBRARY(OpenEngine_Resources
  Resources.cpp
  IResource.h
  IModelResource.h
  IFontResource.h
  IFontTextureResource.h
  Types/ResourceTypes.h
  ITexture.h
  ITexture2D.h
  Texture2D.h
  ITexture3D.h
  Texture3D.h
  IShaderResource.h
  Exceptions.h
  File.h
  File.cpp
  ResourceManager.h
  DirectoryManager.h
  DirectoryManager.cpp
  IResourcePlugin.h
  IBufferObject.h
  BufferObject.h
  BufferObject.cpp
  IndexBufferObject.h
  IndexBufferObject.cpp
)

TARGET_LINK_LIBRARIES(OpenEngine_Resources
  OpenEngine_Utils
  ${BOOST_FILESYSTEM_LIB}
)
