ADD_LIBRARY(OpenEngine_Scene
  Scene.cpp
  Exceptions.h
  ISceneNode.h
  ISceneNode.cpp
  ISceneNodeVisitor.h
  ISceneNodeVisitor.cpp
  SceneNodes.h
  SceneNodes.cpp
  CollectedGeometryTransformer.cpp
  CollectedGeometryTransformer.h
  DirectionalLightNode.cpp
  DirectionalLightNode.h
  DotVisitor.cpp
  DotVisitor.h
  GeometryNode.cpp
  GeometryNode.h
  BlendingNode.cpp
  BlendingNode.h
  PointLightNode.cpp
  PointLightNode.h
  PropertyNode.h
  PropertyNode.cpp
  RenderNode.h
  RenderStateNode.h
  RenderStateNode.cpp
  SceneNode.cpp
  SceneNode.h
  SearchTool.h
  SearchTool.cpp
  SpotLightNode.cpp
  SpotLightNode.h
  StrategyVisitor.h
  StrategyVisitor.cpp
  TransformationNode.cpp
  TransformationNode.h
  VertexArrayNode.cpp
  VertexArrayNode.h
  VertexArrayTransformer.cpp
  VertexArrayTransformer.h
  MeshNode.h
  MeshNode.cpp
)

TARGET_LINK_LIBRARIES(OpenEngine_Scene
  OpenEngine_Core
  OpenEngine_Math
  OpenEngine_Utils
  OpenEngine_Geometry
  OpenEngine_Logging
  # link to all libraries that have added extensions to the scene
  ${OE_SCENE_NODE_EXTENSIONS}
)

SUBDIRS(tests)
